local/infra/deployments/deployment-back.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: voting-back
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: voting-back
  template:
    metadata:
      labels:
        app: voting-back
    spec:
      containers:
        - name: voting-back
          image: brosgarc/voting-back
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          ports:
            - containerPort: 8080
