local/infra/deployments/deployment-db.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: voting-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: voting-db
  template:
    metadata:
      labels:
        app: voting-db
    spec:
      containers:
        - name: voting-db
          image: mongo:latest
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          ports:
            - containerPort: 27017
