local/infra/deployments/deployment-front.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: voting-front
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: voting-front
  template:
    metadata:
      labels:
        app: voting-front
    spec:
      containers:
        - name: voting-front
          image: brosgarc/voting-front
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          ports:
            - containerPort: 3000
