local/infra/deployments/service-back.yaml
apiVersion: v1
kind: Service
metadata:
  name: voting-back
spec:
  selector:
    app: voting-back
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: LoadBalancer
