local/infra/deployments/service-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: voting-db
spec:
  selector:
    app: voting-db
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
