local/infra/deployments/service-front.yaml
apiVersion: v1
kind: Service
metadata:
  name: voting-front
spec:
  selector:
    app: voting-front
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: LoadBalancer
